--- a/trujillo.html
+++ b/trujillo.html
@@ -367,7 +367,7 @@ f<!DOCTYPE html>
         <div class="span12"><br><br><br><br></div>
         <div class="span1"></div>
         <div class="span6">
-          <h1>trujillo (Pasco)</h1>
+          <h1>Trujillo (La Libertad)</h1>
           <h3>Lugar</h3>
           <p>Av. Larco cuadra 17</p>
           <h3>Áreas del evento</h3>
